<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.azimjon0910gmail.MainActivity">

    <group android:id="@+id/group_main">
        <item
            android:id="@+id/flashLight"
            android:icon="@drawable/ic_flashlight_black_24dp"
            android:title="@string/flashlight"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_about"
            android:title="@string/about_app"
            android:orderInCategory="1"/>
        <item
            android:id="@+id/exit"
            android:orderInCategory="2"
            android:title="@string/exit"
            app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/group_list_checked"
        android:visible="false">
        <item
            android:id="@+id/action_edit"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/edit"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_delete"
            android:icon="@drawable/ic_delete_forever_black_24dp"
            android:title="@string/delete"
            app:showAsAction="ifRoom" />
    </group>

</menu>

