<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="12dp"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TitleDialogTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/add_tp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etFreq1"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:hint="@string/freq1"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPolarization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/polarization_H"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etFreq2"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:hint="@string/freq2"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textSize="20sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/etChannels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/channels"
        android:maxLines="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:divider="@color/colorGray"
        android:dividerPadding="10dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/btnCancel"
            style="@style/ButtonCancelSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_cancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnSave"
            style="@style/ButtonCancelSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_save"
            android:text="@string/btn_save_text" />

    </LinearLayout>

</LinearLayout>